# Corewar

./: .gitignore  Makefile  asm  author  corewar.h  free_job.c  main.c  op.h  pivnik.s  read_data.c  test
VM/: a.out  corewar.h  create_map.c  ns_additional_func.c  ns_additional_func2.c  ns_additional_func3.c  ns_save_fch.c  ns_zero_struct.c  op.h  pivnik.cor  pivnik.s  start_game.c
VM/libft/: af_per_doxu.c  af_per_sc.c  alignment_s.c  find_flags.c  format_b_jz.c  format_di.c  format_o.c  format_s.c  format_u.c  format_u_jz.c  format_x.c  ft_aligment_sharp.c  ft_aligment_wchar.c  ft_atoi.c  ft_dot.c  ft_intlen.c  ft_isalnum.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_itoa_base.c  ft_lstdel.c  ft_lstmap.c  ft_memccpy.c  ft_memcmp.c  ft_memset.c  ft_min_max.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strdel.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  (+13 more)
VM/ncurses/: first.c  second.c
VM/operations/: ns_aff.c  ns_and.c  ns_and2.c  ns_fork.c  ns_ldi.c  ns_live.c  ns_lldi.c  ns_sti2.c  ns_xor2.c
VM/vm_champs/champs/: slider2.s
VM/vm_champs/corewar_op_champions_test/: and.cor  and.s  test2.s
VM_cor/: CMakeLists.txt  Makefile  a.out  corewar  corewar.h  create_map.c  dump_flag.c  main.c  ns_additional_func.c  ns_additional_func2.c  ns_additional_func3.c  ns_cursor_create.c  ns_error.c  ns_read_champion.c  ns_save_fch.c  ns_zero_struct.c  op.c  op.h  pivnik.cor  start_game.c
VM_cor/libft/: Makefile  alignment_p.c  flag_hljz.c  format_b.c  format_c.c  format_di_jz.c  format_dig.c  format_o_jz.c  format_p.c  format_x_jz.c  ft_alignment.c  ft_alignment_di.c  ft_bzero.c  ft_isalpha.c  ft_isascii.c  ft_itoa_intmax.c  ft_lstadd.c  ft_lstdelone.c  ft_lstiter.c  ft_lstnew.c  ft_memalloc.c  ft_memchr.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_printf.c  ft_putchar.c  ft_putendl.c  ft_putnbr_fd.c  ft_putnbr_u.c  ft_putstr.c  ft_putstr_u.c  ft_strcpy.c  ft_strdup.c  ft_strequ.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strndup.c  (+9 more)
VM_cor/ncurses/: first.c  fourth.c  second.c  third.c
VM_cor/operations/: ns_add.c  ns_aff.c  ns_and.c  ns_fork.c  ns_ld.c  ns_ldi.c  ns_ldi2.c  ns_live.c  ns_lld.c  ns_lldi.c  ns_lldi2.c  ns_or.c  ns_or2.c  ns_st.c  ns_sti.c  ns_sub.c  ns_xor.c  ns_xor2.c  ns_zjmp.c
VM_cor/vm_champs/champs/: Octobre_Rouge_V4.2.s
VM_cor/vm_champs/champs/examples/: test.s  zork.cor  zork.s
VM_cor/vm_champs/corewar_op_champions_test/: test.cor
assembler/: Makefile  asm  compare_script.sh  main.c  name of program.cor  op.h  test  test.s  test1.s  test2.s  validation.c  validation.h
assembler/corefile/: a.out  file.cor  main.c
assembler/corefile/includes/: corefile.h  libft.h
assembler/header_validation/: brackets_validation.c  header_validation.c  header_validation.h  name_and_comment_present_and_only_one.c  save_header.c  show_header_error.c
assembler/lexer/: Final state table.xlsx  final_state_attributes.c  find_tokens.c  free_job.c  lexer.c  lexer.h  read_data.c  show_error.c  state_table.c
assembler/parser/: Makefile
assembler/parser/libft/: Makefile
lexer/: lexer.c  lexer.h
lexer/state_functions/: 10_state_column.c
vm_champs/champs/: 42.s  Backward.s  ex.cor  ex.s
(+95 files in other folders)
