cmake_minimum_required(VERSION 3.9)
project(VM_cor)

set(CMAKE_CXX_STANDARD 11)

add_executable(VM_cor
        libft/af_per_doxu.c
        libft/af_per_sc.c
        libft/alignment_p.c
        libft/alignment_s.c
        libft/find_flags.c
        libft/flag_hljz.c
        libft/format_b.c
        libft/format_b_jz.c
        libft/format_c.c
        libft/format_di.c
        libft/format_di_jz.c
        libft/format_dig.c
        libft/format_o.c
        libft/format_o_jz.c
        libft/format_p.c
        libft/format_s.c
        libft/format_u.c
        libft/format_u_jz.c
        libft/format_x.c
        libft/format_x_jz.c
        libft/ft_aligment_sharp.c
        libft/ft_aligment_wchar.c
        libft/ft_alignment.c
        libft/ft_alignment_di.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_dot.c
        libft/ft_intlen.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_isspace.c
        libft/ft_itoa.c
        libft/ft_itoa_base.c
        libft/ft_itoa_intmax.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_min_max.c
        libft/ft_printf.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putnbr_u.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_putstr_u.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strndup.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_swap.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_zero.c
        libft/get_next_line.c
        libft/libft.h
        libft/print_addres.c
        libft/putchar_int.c
        libft/putstr_int.c
        libft/unsigned_itoa.c
        libft/zero_flags.c
        corewar.h
        create_map.c
        main.c
        ns_additional_func.c
        ns_read_champion.c
        ns_zero_struct.c
        op.c
        op.h dump_flag.c ns_cursor_create.c operations/ns_add.c operations/ns_sub.c operations/ns_and.c operations/ns_xor.c operations/ns_or.c operations/ns_st.c)
